# job-posting-extractor-project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/config/: settings.py
src/extract/: data_extractor.py  pipeline.py
src/load/: data_loader.py  db_bootstrap.py  db_connector.py  normalization_loader.py
src/load/sql/: normalized_schema.sql  normalized_seed_companies.sql  normalized_seed_job_skills.sql  normalized_seed_jobs.sql  normalized_seed_locations.sql  normalized_seed_reference_entities.sql  normalized_seed_skills.sql
src/transform/: data_transformer.py  raw_jobs_schema.py
src/utils/: logging_config.py
tests/: test_data_extractor.py  test_data_loader.py  test_data_transformer.py  test_db_bootstrap.py  test_db_connector.py  test_main.py  test_normalization_skills.py  test_pipeline.py
