[project]
name = "job_posting_extractor_project"
version = "0.1.0"
description = "Pipeline to process and model job postings to create a robust database that will serve as the source of truth for future analysis and applications"
authors = [
    {name = "Tatiana Escobar"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.poetry]
package-mode = false